--- a/.env.sample
+++ b/.env.sample
@@ -20,4 +20,5 @@ DB_NAME=enchant
 # Streaming
 STREAM_FILE_NAME=fileSequence{n}.ts
 STREAM_SEGMENT_TIME=10
+STREAM_RESOLUTION=1080,720
 VOD_CUTOFF_TIME=6
