--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "enchanter",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "A script which allows the live streaming of random pre-processed and chunked vods stored in S3.",
   "main": "enchanter.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "./node_modules/.bin/mocha --compilers js:babel-register",
     "dev": "nodemon enchanter.js --exec babel-node",
     "build": "rimraf dist/ && babel ./ --out-dir dist/ --ignore ./node_modules,./log,./example,./.babelrc,./readme.md,./.env,./.envsample,./.eslintrc.json,./.gitignore,./package-lock.json,./package.json,./src/streamer.old.js,./src/render.old.js --copy-files"
   },
@@ -13,6 +13,7 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-airbnb": "^2.5.3",
+    "babel-register": "^6.26.0",
     "chai": "^4.2.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
